--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   </main>
 
-  <footer class="section-dark text-center pad-t pad-b gutter-1-2">
+  <footer role="contentinfo" class="section-dark text-center pad-t pad-b gutter-1-2">
     <small>© The Search for Hidden Galaxies</small>
   </footer>
 
